@@ -1,8 +1,10 @@
 golang-petname (2.11) unreleased; urgency=medium
 
-  * UNRELEASED
+  [ Romain Verduci ]
+  * petname.go:
+    - add non-deterministic mode
 
- -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 13 Jun 2019 15:04:56 -0500
+ -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Nov 2019 15:51:43 -0600
 
 golang-petname (2.10-0ubuntu1) eoan; urgency=medium
 
